unpackaged/main/default/objects/Graphics_Pack_Example__c/fields/First_3_awards__c.field-meta.xml
<CustomField>
    <fullName>First_3_awards__c</fullName>
    <formula>CASE( First_3_positions__c ,
"Gold", IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxb3","Gold",16,16), 
"Silver", IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxb6","Silver",16,16),
"Bronze", IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxb0","Bronze",16,16),
 "")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First 3 Awards</label>
    <type>Text</type>
</CustomField>