unpackaged/main/default/objects/Graphics_Pack_Example__c/fields/First_3_medals__c.field-meta.xml
<CustomField>
    <fullName>First_3_medals__c</fullName>
    <formula>CASE( First_3_positions__c ,
"Gold", IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxdo","Gold",16,16),
"Silver", IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxdr","Silver",16,16),
"Bronze", IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxdl","Bronze",16,16),
"")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First 3 Medals</label>
    <type>Text</type>
</CustomField>