unpackaged/main/default/objects/Graphics_Pack_Example__c/fields/Out_of_3_currency__c.field-meta.xml
<CustomField>
    <fullName>Out_of_3_currency__c</fullName>
    <formula>IF ( VALUE(TEXT(Out_of_3_rating__c)) &gt; 0, IMAGE("/servlet/servlet.FileDownload?file=01530000001HxYZ", "£", 16, 16),"")
 +
IF ( VALUE(TEXT(Out_of_3_rating__c)) &gt; 1, IMAGE("/servlet/servlet.FileDownload?file=01530000001HxYY", "€", 16, 16),"")
+
IF ( VALUE(TEXT(Out_of_3_rating__c)) &gt; 2, IMAGE("/servlet/servlet.FileDownload?file=01530000001HxYX", "$", 16, 16),"")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Out of 3 Currency</label>
    <type>Text</type>
</CustomField>