unpackaged/main/default/objects/Graphics_Pack_Example__c/fields/Out_of_5_deck_chair__c.field-meta.xml
<CustomField>
    <fullName>Out_of_5_deck_chair__c</fullName>
    <formula>IF ( VALUE(TEXT(Out_of_5_rating__c)) &gt; 0, IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxit", "*", 16, 16),"")
+
IF ( VALUE(TEXT(Out_of_5_rating__c)) &gt; 1, IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxit", "*", 16, 16),"")
+
IF ( VALUE(TEXT(Out_of_5_rating__c)) &gt; 2, IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxit", "*", 16, 16),"")
+
IF ( VALUE(TEXT(Out_of_5_rating__c)) &gt; 3, IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxit", "*", 16, 16),"")
+
IF ( VALUE(TEXT(Out_of_5_rating__c)) &gt; 4, IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxit", "*", 16, 16),"")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Out of 5 Deck Chairs</label>
    <type>Text</type>
</CustomField>