unpackaged/main/default/objects/Graphics_Pack_Example__c/fields/Red_Amber_Green__c.field-meta.xml
<CustomField>
    <fullName>Red_Amber_Green__c</fullName>
    <label>Red Amber Green</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
                <default>true</default>
                <label>Red</label>
            </value>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>