unpackaged/main/default/objects/Graphics_Pack_Example__c/fields/Red_Amber_Green_Person__c.field-meta.xml
<CustomField>
    <fullName>Red_Amber_Green_Person__c</fullName>
    <formula>CASE( Red_Amber_Green__c ,
"Red", IMAGE("/servlet/servlet.FileDownload?file=01530000001HxaQ","Red",16,16),
"Amber", IMAGE("/servlet/servlet.FileDownload?file=01530000001HxaP","Amber",16,16),
"Green", IMAGE("/servlet/servlet.FileDownload?file=01530000001HxaO","Green",16,16),
"")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Red Amber Green Person</label>
    <type>Text</type>
</CustomField>