unpackaged/main/default/objects/Graphics_Pack_Example__c/fields/Up_or_Down_Arrows__c.field-meta.xml
<CustomField>
    <fullName>Up_or_Down_Arrows__c</fullName>
    <formula>CASE(  Up_or_Down__c,
"Up", IMAGE("/servlet/servlet.FileDownload?file=01530000001HxhW","Up",16,16),
"Down", IMAGE("/servlet/servlet.FileDownload?file=01530000001HxhU","Down",16,16),
"")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Up or Down Arrows</label>
    <type>Text</type>
</CustomField>