unpackaged/main/default/objects/Graphics_Pack_Example__c/fields/Up_or_Down_Thumbs__c.field-meta.xml
<CustomField>
    <fullName>Up_or_Down_Thumbs__c</fullName>
    <formula>CASE( Up_or_Down__c ,
"Up", IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxfi","Up",16,16),
"Down", IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxfh","Down",16,16),
"")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Up or Down Thumbs</label>
    <type>Text</type>
</CustomField>